Removing smallcaps from section titles

--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -42,7 +42,7 @@ This third module is part of a four-part series:
 
 :::: {.columns .f3}
 ::: {.column width="50%" .mt4 .pr4}
-### [introduction]{.smallcaps}
+### Introduction
 - [{{< var vm.product >}} for model development](#validmind-for-model-development)
 :::
 
@@ -51,7 +51,7 @@ This third module is part of a four-part series:
 :::: {.columns .f3}
 
 ::: {.column width="50%" .mt4 .pr4}
-### [section 1]{.smallcaps}
+### Section 1
 
 - [Implement custom inline tests](#implement-custom-tests)
 - [Use external test providers](#use-external-test-providers)
@@ -59,7 +59,7 @@ This third module is part of a four-part series:
 :::
 
 ::: {.column width="50%" .mt4}
-### [section 2]{.smallcaps}
+### Section 2
 
 - [Include custom test results](#include-custom-test-results)
 - [Configure the model's documentation template](#configure-documentation-template)
@@ -170,15 +170,15 @@ Our series of four introductory notebooks for model developers include sample co
 4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
 
 ::: {.f4 .pl3 .pr3 .embed}
-In this third module, we'll run through the remaining two notebooks **3** in [section 1]{.smallcaps} and **4** in [section 2]{.smallcaps} together.
+In this third module, we'll run through the remaining two notebooks **3** in Section 1 and **4** in Section 2 together.
 :::
 
 :::
 ::::
 
-Let's continue our journey with **[section 1]{.smallcaps}** on the next page. {{< fa hand-point-right >}}
+Let's continue our journey with **Section 1** on the next page. {{< fa hand-point-right >}}
 
-# [section 1]{.smallcaps} {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
+# Section 1 {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html" background-interactive="yes" data-preload="yes"}
 
@@ -468,7 +468,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 
 
-# [section 2]{.smallcaps} {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
+# Section 2 {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html" background-interactive="yes" data-preload="yes"}
 
