--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -44,7 +44,7 @@ This {{#th}} module is part of a {{#}}-part series:
 
 :::: {.columns .f4}
 ::: {.column width="50%" .mt4 .pr4}
-### [introduction]{.smallcaps}
+### Introduction
 - [Before you begin](#before-you-begin)
 
 :::
@@ -54,7 +54,7 @@ This {{#th}} module is part of a {{#}}-part series:
 :::: {.columns .f4}
 
 ::: {.column width="50%" .mt4 .pr4}
-### [section 1]{.smallcaps}
+### Section 1
 
 1. [iFrame embed right](#iframe-embed-right)
 2. [iFrame embed bottom](#iframe-embed-bottom)
@@ -65,7 +65,7 @@ This {{#th}} module is part of a {{#}}-part series:
 :::
 
 ::: {.column width="50%" .mt4}
-### [section 2]{.smallcaps}
+### Section 2
 
 Example embedded `iframe` for interactive copy/paste workaround:
 
@@ -132,7 +132,7 @@ Be sure to return to this page afterwards.
 
 :::
 
-# [section 1]{.smallcaps} {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
+# Section 1 {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
 
 # iFrame embed right {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -264,7 +264,7 @@ All you need to do is make sure that the headers within `.panel-tabset` are set 
 <!-- YOU MIGHT NEED TO MOVE THIS TO THE BOTTOM OF THE LEFT COLUMN -->
 Try it **live** on the next page. {{< fa hand-point-right >}}
 
-# [section 2]{.smallcaps} {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
+# Section 2 {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
 
 ## Get your code snippet
 
