Image replace for sections

--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -178,7 +178,7 @@ In this third module, we'll run through the remaining two notebooks **3** in Sec
 
 Let's continue our journey with **Section 1** on the next page. {{< fa hand-point-right >}}
 
-# Section 1 {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
+# Section 1 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html" background-interactive="yes" data-preload="yes"}
 
@@ -468,7 +468,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 
 
-# Section 2 {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
+# Section 2 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html" background-interactive="yes" data-preload="yes"}
 
