--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -132,7 +132,7 @@ Be sure to return to this page afterwards.
 
 :::
 
-# Section 1 {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
+# Section 1 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
 # iFrame embed right {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -264,7 +264,7 @@ All you need to do is make sure that the headers within `.panel-tabset` are set 
 <!-- YOU MIGHT NEED TO MOVE THIS TO THE BOTTOM OF THE LEFT COLUMN -->
 Try it **live** on the next page. {{< fa hand-point-right >}}
 
-# Section 2 {background-color="#083E44" background-image="/assets/img/solutions-hero.png"}
+# Section 2 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
 ## Get your code snippet
 
