Fixed the one tabset

--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -441,17 +441,22 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ## {.scrollable}
 
 :::: {.columns}
-::: {.column width="30%" .pr4 .f2}
+::: {.column width="50%" .pr4 .f2}
 Model testing with {{< var vm.product >}}
 
-<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
 :::
 
-::: {.column width="70%" .bl .pl4 .f3}
+::: {.column width="50%" .bl .pl4 .f2}
+Try it **live** on the next pages. {{< fa hand-point-right >}}
+
+:::
+::::
+
+::: {.f3}
+<br>
 So far, we’ve focused on the data assessment and pre-processing that usually occurs prior to any models being built. Now, let’s instead assume we have already built a model and we want to incorporate some model results into our documentation:
 
-
-::: {.panel-tabset}
+::: {.panel-tabset .f4}
 
 ### 1. Train your model
 
@@ -471,7 +476,6 @@ In this next example, we’ll focus on running the tests within the Model Develo
 :::
 
 :::
-::::
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/2-start_development_process.html#train-simple-logistic-regression-model" data-preload="yes"}
 
