--- a/site/guide/reporting/export-documentation.qmd
+++ b/site/guide/reporting/export-documentation.qmd
@@ -67,18 +67,16 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 ## What's next
 
-* [Working with model documentation](working-with-model-documentation.qmd)
-* [Collaborate on documentation](collaborate-with-others.qmd)
-* [Submit for approval](submit-for-approval.qmd)
-
-
+* [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+* [Collaborate on documentation](/guide/model-documentation/collaborate-with-others.qmd)
+* [Submit for approval](/guide/model-documentation/submit-for-approval.qmd)
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Working with model documentation](working-with-model-documentation.qmd)
+[^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
