Vertically align shorter slides

--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -26,7 +26,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# Learning objectives
+# Learning objectives {.center}
 
 _"As a **developer** who has run and logged out-of-the-box tests with {{< var vm.product >}}, I want to update my documentation template to include manually inserted test results, implement, run, and log custom tests, and include those custom tests in my documentation template."_
 
@@ -38,7 +38,7 @@ This third module is part of a four-part series:
 :::
 
 
-## Module 3 — Contents
+## Module 3 — Contents {.center}
 
 :::: {.columns .f3}
 ::: {.column width="50%" .mt4 .pr4}
@@ -73,7 +73,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-## Before you begin
+## Before you begin {.center}
 
 ::: {.panel-tabset}
 
@@ -140,7 +140,7 @@ Be sure to return to this page afterwards.
 
 # ValidMind for model development {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -168,6 +168,7 @@ Our series of four introductory notebooks for model developers include sample co
 2 — [Start the model development process](/notebooks/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}<br>
 3 — [Integrate custom tests](/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}<br>
 4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
+<br>
 
 ::: {.f4 .pl3 .pr3 .embed}
 In this third module, we'll run through the remaining two notebooks **3** in Section 1 and **4** in Section 2 together.
@@ -260,7 +261,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Implement custom tests {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -333,7 +334,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Use external test providers {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -580,7 +581,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Configure documentation templates {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -641,7 +642,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
