--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -26,7 +26,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# Learning objectives
+# Learning objectives {.center}
 
 _"As a **developer** who has registered a model with {{< var vm.product >}}, I want to identify relevant tests to run from {{< var vm.product >}}'s test repository, run and log tests for my model, and insert the test results into my model's documentation."_
 
@@ -38,7 +38,7 @@ This second module is part of a four-part series:
 :::
 
 
-## Module 2 — Contents
+## Module 2 — Contents {.center}
 
 ::: {.f2}
 1. [{{< var vm.product >}} for model development](#validmind-for-model-development)
@@ -53,7 +53,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-## Before you begin
+## Before you begin {.center}
 
 ::: {.panel-tabset}
 
@@ -109,7 +109,7 @@ Be sure to return to this page afterwards.
 
 # ValidMind for model development {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -135,6 +135,7 @@ Our series of four introductory notebooks for model developers include sample co
 2 — [Start the model development process](/notebooks/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}<br>
 3 — [Integrate custom tests](/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}<br>
 4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
+<br>
 
 ::: {.f4 .pl3 .pr3 .embed}
 In this second module, we'll run through **2 — Start the model development process** together. 
@@ -325,7 +326,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Log ValidMind tests {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -381,7 +382,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -438,7 +439,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Test an existing model {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="50%" .pr4 .f2}
@@ -548,7 +549,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
