--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -28,7 +28,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# Learning objectives
+# Learning objectives {.center}
 
 _"As a {{ role }} who ... {{< var vm.product >}}, I want to learn how to {{ task A }}, {{ task B }}, {{ task C }}, and {{ task D}}."_
 
@@ -40,7 +40,7 @@ This {{#th}} module is part of a {{#}}-part series:
 [Course Link](/training/training-templates/course-registration.qmd){.button target="_blank"}
 :::
 
-## In this course
+## In this course {.center}
 
 :::: {.columns .f4}
 ::: {.column width="50%" .mt4 .pr4}
@@ -82,7 +82,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-## Before you begin
+## Before you begin {.center}
 
 ::: {.panel-tabset}
 
@@ -229,11 +229,11 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis sapien blandit
 # Scrollable tabset user guides {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 <!-- USE `.scrollable` IN AN H2  -->
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
-You can also embed several sets of instructions into the same two-column layout. 
+You can also embed several sets of instructions into the same two-column layout, and vertically center content. 
 
 ::: {.tc}
 <!-- CHANGE THIS TO THE EXTERNAL USER GUIDE LINK -->
@@ -316,7 +316,7 @@ Make sure you're logged in and have refreshed the page.
 
 # Next steps {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -332,10 +332,10 @@ Make sure you're logged in and have refreshed the page.
 ::: {.column width="70%" .bl .pl4 .f3}
 In this {{#th}} module, you learned how to:
 
-- [ ] task
-- [ ] task
-- [ ] task
-- [ ] task
+- [x] task
+- [x] task
+- [x] task
+- [x] task
 
 :::
 ::::
