--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -26,7 +26,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# Learning objectives
+# Learning objectives {.center}
 
 _"As a **developer** who has logged tests with the {{< var validmind.developer >}} to the {{< var validmind.platform >}}, I want to refine my model's documentation, submit my model documentation for approval, and track changes and other updates to my model."_
 
@@ -38,7 +38,7 @@ This final module is part of a four-part series:
 :::
 
 
-## Module 4 — Contents
+## Module 4 — Contents {.center}
 
 ::: {.f2}
 1. [Refine model documentation](#refine-model-documentation)
@@ -52,7 +52,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-## Before you begin
+## Before you begin {.center}
 
 ::: {.panel-tabset}
 
@@ -113,7 +113,7 @@ Be sure to return to this page afterwards.
 
 # Refine model documentation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -237,7 +237,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Submit documentation for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -295,7 +295,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Collaborate with others {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -343,7 +343,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Track model activity {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -386,7 +386,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
