--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -26,7 +26,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# Learning objectives
+# Learning objectives {.center}
 
 _"As a **developer** who is new to {{< var vm.product >}}, I want to learn how to register a model in the {{< var validmind.platform >}}, install the {{< var validmind.developer >}} in my local environment, and preview my model's documentation template."_
 
@@ -38,7 +38,7 @@ This first module is part of a four-part series:
 :::
 
 
-## Module 1 — Contents
+## Module 1 — Contents {.center}
 
 ::: {.f2}
 1. [{{< var vm.product >}} for model development](#validmind-for-model-development)
@@ -52,7 +52,7 @@ First, let's make sure you can log in to {{< var vm.product >}}.
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-## Before you begin
+## Before you begin {.center}
 
 ::: {.panel-tabset}
 
@@ -106,7 +106,7 @@ Be sure to return to this page afterwards.
 
 # ValidMind for model development {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -127,6 +127,7 @@ Our series of four introductory notebooks for model developers include sample co
 2 — [Start the model development process](/notebooks/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}<br>
 3 — [Integrate custom tests](/notebooks/tutorials/model_development/3-integrate_custom_tests.ipynb){target="_blank"}<br>
 4 — [Finalize testing and documentation](/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}<br>
+<br>
 
 ::: {.f4 .pl3 .pr3 .embed}
 In this first module, we'll run through **1 — Set up the {{< var validmind.developer >}}** together.
@@ -339,7 +340,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable}
+## {.scrollable .center}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
