--- a/site/training/developer-fundamentals/developer-fundamentals-register.qmd
+++ b/site/training/developer-fundamentals/developer-fundamentals-register.qmd
@@ -42,6 +42,11 @@ listing:
 
 Learn how to use {{< var vm.product >}} as a **developer** to generate model documentation, automate testing, and track your model's progress through the model lifecycle.
 
+::: {.column-margin}
+{{< include /training/_compatibility.qmd >}}
+
+:::
+
 <!-- COURSE CARD -->
 ::: {.attn}
 ## In this course
