--- a/site/training/training-templates/course-registration.qmd
+++ b/site/training/training-templates/course-registration.qmd
@@ -41,7 +41,12 @@ listing:
     fields: [title, subtitle, description, reading-time]
 ---
 
-As a {{ role }} new to {{< var vm.product >}}, learn how to {{ course_overview }}.
+Learn how to use {{< var vm.product >}} as a {{ role }}, to {{ list_tasks }}.
+
+::: {.column-margin}
+{{< include /training/_compatibility.qmd >}}
+
+:::
 
 <!-- COURSE CARD -->
 ::: {.attn}
