--- a/site/training/validator-fundamentals/validator-fundamentals-register.qmd
+++ b/site/training/validator-fundamentals/validator-fundamentals-register.qmd
@@ -8,6 +8,11 @@ aliases:
 
 Learn how to use {{< var vm.product >}} as a **validator** to generate validation reports, automate testing, and collaborate with your model development team.
 
+::: {.column-margin}
+{{< include /training/_compatibility.qmd >}}
+
+:::
+
 <!-- COURSE CARD -->
 ::: {.attn}
 ## In this course
