--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -8,6 +8,11 @@ aliases:
 
 Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, manage users, roles, and permissions, and customize the {{< var vm.platform >}} for your institution's requirements.
 
+::: {.column-margin}
+{{< include /training/_compatibility.qmd >}}
+
+:::
+
 <!-- COURSE CARD -->
 ::: {.attn}
 ## In this course
