fix: [sc-9632] Add missing "Export ongoing monitoring document" section to docs (#693)
* Add missing export ongoing monitoring documentation

* Add export docs to monitoring section in sidebar

* Address review comments

* Update topic intro to mention ongoing monitoring docs

* Tweak how we embed exporting documentation

* Remove reporting from documentation FAQ

* Update site/guide/reporting/export-documentation.qmd

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

---------

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

--- a/site/guide/reporting/export-documentation.qmd
+++ b/site/guide/reporting/export-documentation.qmd
@@ -3,9 +3,10 @@ title: "Export documentation"
 date: last-modified
 aliases:
   - /guide/export-documentation.html
+  - /guide/model-documentation/export-documentation.html
 ---
 
-Export your model documentation or validation reports as Microsoft Word files (`.docx`) for use outside of the {{< var validmind.platform >}}.
+Export your model documentation, validation reports, and ongoing monitoring documentation as Microsoft Word files (`.docx`) for use outside of the {{< var validmind.platform >}}.
 
 ::: {.callout}
 {{< var vm.product >}} supports Word 365, Word 2019, Word 2016, and Word 2013.
@@ -53,20 +54,30 @@ Export your model documentation or validation reports as Microsoft Word files (`
 
 6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
+## Export ongoing monitoring documentation
+
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+2. Select a model or find your model by applying a filter or searching for it.[^4]
+
+3. In the left sidebar that appears for your model, click **{{< fa desktop >}} Ongoing Monitoring**.
+
+4. In right sidebar, click **{{< fa download >}} Export Document**.
+
+7. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
+
 ## What's next
 
-* [Working with model documentation](working-with-model-documentation.qmd)
-* [Collaborate on documentation](collaborate-with-others.qmd)
-* [Submit for approval](submit-for-approval.qmd)
-
-
+* [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
+* [Collaborate on documentation](/guide/model-documentation/collaborate-with-others.qmd)
+* [Submit for approval](/guide/model-documentation/submit-for-approval.qmd)
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^2]: [Working with model documentation](working-with-model-documentation.qmd)
+[^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
