--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -50,7 +50,6 @@ listing:
     contents: 
     - model-documentation/working-with-documentation-templates.qmd
     - model-documentation/working-with-model-documentation.qmd
-    # - model-documentation/export-documentation.qmd
   - id: guides-developer
     type: grid
     max-description-length: 250
@@ -70,8 +69,8 @@ listing:
     - model-validation/working-with-model-findings.qmd
   - id: guides-reports
     contents: 
-    - model-validation/view-reports.qmd
-    - model-documentation/export-documentation.qmd
+    - reporting/working-with-analytics.qmd
+    - reporting/export-documentation.qmd
     type: grid
     max-description-length: 250
     sort: false
@@ -152,7 +151,7 @@ Set up validation guidelines and prepare validation reports, work with findings 
 :::{#guides-model-validation}
 :::
 
-### Reporting
+## Reporting
 
 Review reports or export your documentation for external records:
 
