--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -201,46 +201,45 @@ This is the third notebook in our introductory series, which will walk you throu
 
 ::: {.column width="80%"}
 
-::: {.absolute left="-150" width="100%"}
 <!-- FOR COPYING THE CODE SNIPPET WE NEED TO USE THIS IFRAME WORKAROUND -->
 
-<div style="zoom: 0.8; overflow: hidden;">
-<iframe 
+<div style="zoom: 0.6; overflow: hidden;">
+  <iframe 
     src="https://app.prod.validmind.ai/model-inventory" 
     width="100%" 
     height="750" 
+    style="border: 1px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;"
     data-preload="yes" 
     sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
     allow="clipboard-read; clipboard-write">
-</iframe>
+  </iframe>
 </div>
-:::
 
 :::
 
-::: {.column width="20%" .pt2}
+::: {.column width="20%" .f4}
 
-::: {.absolute right="-150" .w-30 .f4 .pl4 .pt2 .pb3 .bl}
-First, let's connect back up to your model in the {{< var validmind.platform >}}:
+::: {.f5}
+{{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
+1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
+:::
+
 When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::: {.overlay .pa2 .pl3 .f5}
-**Can't load the {{< var validmind.platform >}}?**
-
-Make sure you're logged in and have refreshed the module.
-:::
-
-
-:::
 
 :::
 
 ::::
+
+:::: {.tc .f6 .embed}
+**Can't load the {{< var validmind.platform >}}?**
+
+Make sure you're logged in and have refreshed the page.
+
+:::
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/3-integrate_custom_tests.html#initialize-the-validmind-library" data-preload="yes"}
 
@@ -484,46 +483,44 @@ This is the final notebook in our introductory series, which will walk you throu
 
 ::::
 
-## Get your code snippet
+## Retrieve your code snippet
 
 :::: {.columns}
 
 ::: {.column width="80%"}
 
-::: {.absolute left="-150" width="100%"}
 <!-- FOR COPYING THE CODE SNIPPET WE NEED TO USE THIS IFRAME WORKAROUND -->
 
-<div style="zoom: 0.8; overflow: hidden;">
-<iframe 
+<div style="zoom: 0.6; overflow: hidden;">
+  <iframe 
     src="https://app.prod.validmind.ai/model-inventory" 
     width="100%" 
     height="750" 
+    style="border: 1px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;"
     data-preload="yes" 
     sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
     allow="clipboard-read; clipboard-write">
-</iframe>
+  </iframe>
 </div>
-:::
 
 :::
 
-::: {.column width="20%" .pt2}
+::: {.column width="20%"}
 
-::: {.absolute right="-150" .w-30 .f3 .pl4 .pt2 .pb3 .bl}
+::: {.f4}
 As usual, let's connect back up to your model in the {{< var validmind.platform >}}:
 
-1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
+1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
-
-When you're done, click [{{< fa chevron-right >}}]() to continue.
-
 
 :::
 
 :::
 
 ::::
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html#initialize-the-validmind-library" data-preload="yes"}
 
