--- a/site/training/training-templates/course-slides.qmd
+++ b/site/training/training-templates/course-slides.qmd
@@ -272,49 +272,47 @@ Try it **live** on the next page. {{< fa hand-point-right >}}
 
 ::: {.column width="80%"}
 
-::: {.absolute left="-150" width="100%"}
 <!-- FOR COPYING THE CODE SNIPPET WE NEED TO USE THIS IFRAME WORKAROUND -->
 
-<div style="zoom: 0.8; overflow: hidden;">
-<iframe 
+<div style="zoom: 0.6; overflow: hidden;">
+  <iframe 
     src="https://app.prod.validmind.ai/model-inventory" 
     width="100%" 
     height="750" 
+    style="border: 1px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;"
     data-preload="yes" 
     sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
     allow="clipboard-read; clipboard-write">
-</iframe>
+  </iframe>
 </div>
-:::
 
 :::
 
-::: {.column width="20%" .pt2}
+::: {.column width="20%" .f4}
 
-::: {.absolute right="-150" .w-30 .f4 .pl4 .pt2 .pb3 .bl}
+::: {.f5}
 {{< var vm.product >}} generates a unique *code snippet* for each registered model to connect with your developer environment:
 
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model to open up the model details page.
 2. On the left sidebar that appears for your model, click **Getting Started**.
 3. Locate the code snippet and click **Copy snippet to clipboard**.
 
+:::
+
 When you're done, click [{{< fa chevron-right >}}]() to continue.
-
-::: {.overlay .pa2 .pl3 .f5}
-**Can't load the {{< var validmind.platform >}}?**
-
-Make sure you're logged in and have refreshed the page.
-:::
-
-
-:::
 
 :::
 
 ::::
 
+:::: {.tc .f6 .embed}
+**Can't load the {{< var validmind.platform >}}?**
 
-# Next steps {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+Make sure you're logged in and have refreshed the page.
+
+:::
+
+# In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable .center}
 
