--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -470,10 +470,10 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Section 2 {background-color="#083E44" background-image="/assets/img/about-us-esphere.svg"}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html" background-interactive="yes" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html" background-interactive="yes" data-preload="yes"}
 
 :::: {.absolute bottom=15 left=0 right=50 .w-100 .f4 .tc .pl4 .pr4 .overlay}
-**104 Finalize testing and documentation**
+**4 — Finalize testing and documentation**
 
 ::: {.f5}
 This is the final notebook in our introductory series, which will walk you through wrapping custom test results into your documentation, as well as how to update the configuration for the entire model documentation template to suit your needs.
@@ -522,7 +522,7 @@ As usual, let's connect back up to your model in the {{< var validmind.platform 
 
 When you're done, click [{{< fa chevron-right >}}]() to continue.
 
-## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html#initialize-the-validmind-library" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#initialize-the-validmind-library" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Connect to your model**
@@ -530,7 +530,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ::: {.f5}
 With your code snippet copied to your clipboard:
 
-1. Open **104 Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/104-finalize_testing_documentation.ipynb){target="_blank"}
+1. Open **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run all the cells under the **Setting up** section.
 
 :::
@@ -541,7 +541,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 # Include custom test results {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html#reconnect-to-validmind" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#reconnect-to-validmind" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Reconnect to {{< var vm.product >}}**
@@ -549,7 +549,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 After you insert test-driven blocks, changes should persist and become available every time you call the [`preview_template()` function](/validmind/validmind.qmd#preview_template){target="_blank"}:
 
-1. Continue with **104 Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/104-finalize_testing_documentation.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run all the cells under the **Reconnect to {{< var vm.product >}}** section.
 
 :::
@@ -558,7 +558,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html#include-custom-test-results" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#include-custom-test-results" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Log custom test results**
@@ -566,7 +566,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 Now that your custom test IDs are part of your template, you can now run tests for an entire section and all additional custom tests will be loaded:
 
-1. Continue with **104 Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/104-finalize_testing_documentation.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the cell under the **Include custom test results** section.
 
 :::
@@ -604,13 +604,13 @@ The utility function `vm.get_test_suite().get_default_config()` will return the 
 :::
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html#documentation-template-configuration" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#documentation-template-configuration" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Retrieve default configuration**
 
 ::: {.f5}
-1. Continue with **104 Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/104-finalize_testing_documentation.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the first cell under the **Documentation template configuration** section.
 
 :::
@@ -619,7 +619,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
-## {background-iframe="/notebooks/EXECUTED/model_development/104-finalize_testing_documentation.html#update-the-config" data-preload="yes"}
+## {background-iframe="/notebooks/EXECUTED/model_development/4-finalize_testing_documentation.html#update-the-config" data-preload="yes"}
 
 :::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
 **Update template configuration**
@@ -627,7 +627,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::: {.f5}
 The default configuration does not assign any inputs to a test, but you can assign inputs to individual tests as needed:
 
-1. Continue with **104 Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/104-finalize_testing_documentation.ipynb){target="_blank"}
+1. Continue with **4 — Finalize testing and documentation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/4-finalize_testing_documentation.ipynb){target="_blank"}
 2. Run the all the cells under the following Documentation template configuration section: **Update the config**
 
 :::
