--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -237,7 +237,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Submit documentation for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
@@ -295,7 +295,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 # Collaborate with others {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
-## {.scrollable .center}
+## {.scrollable}
 
 :::: {.columns}
 ::: {.column width="30%" .pr4 .f2}
