Moving legal into column on policy page

--- a/site/about/fine-print/data-privacy-policy.qmd
+++ b/site/about/fine-print/data-privacy-policy.qmd
@@ -5,7 +5,7 @@ date: last-modified
 listing:
   id: legal-ease
   type: grid
-  grid-columns: 2
+  grid-columns: 1
   contents:
     - path: https://validmind.com/about/legal/
       title: "Legal Ease"
@@ -19,6 +19,17 @@ aliases:
 This page outlines {{< var vm.product >}}'s data privacy policy, explaining how we protect your personal information. 
 
 Our goal is to provide transparency about our data handling practices and to demonstrate our commitment to protecting your privacy and data security.
+
+::: {.column-margin}
+[commitment to transparency]{.smallcaps .pink}
+
+Understanding our policies shouldn’t feel like deciphering code, so we’ve made our legal texts as clear and accessible as possible:
+<br><br>
+
+::: {#legal-ease}
+:::
+
+:::
 
 ## What is {{< var vm.product >}}'s data privacy policy?
 
@@ -62,11 +73,4 @@ When you generate documentation or run tests, {{< var vm.product >}} imports the
 - Images, plots, visuals that were generated as part of extracting metrics and running tests.
 
 The {{< var validmind.developer >}} does not send any personally identifiable information (PII) through our {{< var validmind.api >}}. 
-
-## A commitment to transparency
-
-Understanding our policies shouldn’t feel like deciphering code, so we’ve made our legal texts as clear and accessible as possible: 
-
-::: {#legal-ease}
-:::
 
