Renaming topic page

--- a/site/guide/model-documentation/managing-templates-text-blocks.qmd
+++ b/site/guide/model-documentation/managing-templates-text-blocks.qmd
@@ -18,7 +18,7 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-      - manage-text-blocks.qmd
+      - manage-text-block-library.qmd
 aliases:
   - /guide/working-with-documentation-templates.html
   - working-with-documentation-templates.html
@@ -33,7 +33,7 @@ Use {{< var vm.product >}}'s versioned documentation templates to ensure consist
 :::{#documentation-templates}
 :::
 
-## Manage text blocks
+## Manage text block library
 
 Maintain a library of reusable text blocks within the {{< var validmind.platform >}} to ensure consistent and comprehensive content within your model documentation, validation reports, and ongoing monitoring reports across all your models.
 
