Add text blocks done

--- a/site/guide/model-documentation/manage-text-block-library.qmd
+++ b/site/guide/model-documentation/manage-text-block-library.qmd
@@ -19,6 +19,27 @@ By default, only the [{{< fa hand >}} Customer Admin]{.bubble} role[^1] is able 
 
 ## Add text blocks
 
+To create a new text block:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+
+3. Click **Add New Block** and enter:
+ 
+    - The **[name]{.smallcaps}** of your text block
+    - (Optional) A **[description]{.smallcaps}** for your text block
+    - The templated **[content]{.smallcaps}** for your text block
+
+4. Select a **[name]{.smallcaps}** option:
+
+    - **Private** — Visible only to you
+    - **Shared** — Accessible across your organization
+
+5. Click **Add Block** to save your text block.
+
+6. After you've added a reusable text block, you can then insert it into your model documentation, validation reports, or ongoing monitoring reports.[^1]
+
 ## Edit text blocks
 
 ## Delete text blocks
@@ -27,4 +48,6 @@ By default, only the [{{< fa hand >}} Customer Admin]{.bubble} role[^1] is able 
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^1]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
 
