Manage text block library done

--- a/site/guide/model-documentation/manage-text-block-library.qmd
+++ b/site/guide/model-documentation/manage-text-block-library.qmd
@@ -31,7 +31,7 @@ To create a new text block:
     - (Optional) A **[description]{.smallcaps}** for your text block
     - The templated **[content]{.smallcaps}** for your text block
 
-4. Select a **[name]{.smallcaps}** option:
+4. Select a **[sharing]{.smallcaps}** option:
 
     - **Private** — Visible only to you
     - **Shared** — Accessible across your organization
@@ -40,9 +40,56 @@ To create a new text block:
 
 6. After you've added a reusable text block, you can then insert it into your model documentation, validation reports, or ongoing monitoring reports.[^1]
 
+#### Duplicate text blocks
+
+To make a copy of an existing text block:
+
+1. To the right of the text block you want to edit, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
+
+2. Make your desired changes to the following fields:
+
+    - The **[name]{.smallcaps}** of your text block
+    - (Optional) A **[description]{.smallcaps}** for your text block
+    - The templated **[content]{.smallcaps}** for your text block
+    - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
+
+3. Click **Duplicate Block** to save the copy of your text block.
+
 ## Edit text blocks
 
+To modify an existing text block:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+
+3. To the right of the text block you want to edit, click **{{< fa ellipsis-vertical >}}** and select **Edit Details**.
+
+4. Make your desired changes to the following fields:
+
+    - The **[name]{.smallcaps}** of your text block
+    - (Optional) A **[description]{.smallcaps}** for your text block
+    - The templated **[content]{.smallcaps}** for your text block
+    - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
+
+5. Click **Save Block** to apply your changes.
+
 ## Delete text blocks
+
+::: {.callout-important title="Text block deletion is permanent."}
+While previously inserted instances of text blocks will not be affected, the text block will no longer be available for future use via the block library.
+:::
+
+To remove an existing text block:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+
+3. To the right of the text block you want to remove, click **{{< fa ellipsis-vertical >}}** and select **[{{< fa trash-can >}} Delete Text Block]{.red}**.
+
+4. Once you confirm, the text block will be removed from your block library.
+
 
 
 <!-- FOOTNOTES -->
