Editing add text blocks

--- a/site/guide/model-documentation/manage-text-block-library.qmd
+++ b/site/guide/model-documentation/manage-text-block-library.qmd
@@ -19,7 +19,7 @@ By default, only the [{{< fa hand >}} Customer Admin]{.bubble} role[^1] is able 
 
 ## Add text blocks
 
-To create a new text block:
+To create a new text block via the block library:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -38,26 +38,50 @@ To create a new text block:
 
 5. Click **Add Block** to save your text block.
 
-6. After you've added a reusable text block, you can then insert it into your model documentation, validation reports, or ongoing monitoring reports.[^1]
+#### Add existing text blocks to library
 
-#### Duplicate text blocks
+To transform an existing text block into a reusable block:
 
-To make a copy of an existing text block:
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-1. To the right of the text block you want to edit, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
+2. Select a model or find your model by applying a filter or searching for it.[^2]
 
-2. Make your desired changes to the following fields:
+3. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring** and select the relevant section containing the text block you want to make reusable.
+
+4. Hover your mouse over the text block you want to add to your block library, and click **{{< fa plus >}} Add to Library** to enter the details for your block:
 
     - The **[name]{.smallcaps}** of your text block
     - (Optional) A **[description]{.smallcaps}** for your text block
     - The templated **[content]{.smallcaps}** for your text block
     - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
 
-3. Click **Duplicate Block** to save the copy of your text block.
+5. Click **Add Block** to save your text block.
+
+
+After you've added a reusable text block, you can then insert it into your model documentation, validation reports, or ongoing monitoring reports.[^3]
+
+## Duplicate text blocks
+
+To make a copy of an existing text block in your block library:
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Workplace Settings, select **{{< fa align-left >}} Block Library**.
+
+3. To the right of the text block you want to edit, click **{{< fa ellipsis-vertical >}}** and select **Duplicate Text Block**.
+
+4. Make your desired changes to the following fields:
+
+    - The **[name]{.smallcaps}** of your text block
+    - (Optional) A **[description]{.smallcaps}** for your text block
+    - The templated **[content]{.smallcaps}** for your text block
+    - Whether the block **[sharing]{.smallcaps}** permissions are **Private** or **Shared**
+
+5. Click **Duplicate Block** to save the copy of your text block.
 
 ## Edit text blocks
 
-To modify an existing text block:
+To modify an existing text block in your block library:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -80,7 +104,7 @@ To modify an existing text block:
 While previously inserted instances of text blocks will not be affected, the text block will no longer be available for future use via the block library.
 :::
 
-To remove an existing text block:
+To remove an existing text block from your block library:
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
@@ -96,5 +120,9 @@ To remove an existing text block:
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^1]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
+[^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^3]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#add-content-blocks)
+
+
 
