New add content block gif

--- a/site/guide/model-documentation/_add-content-block.qmd
+++ b/site/guide/model-documentation/_add-content-block.qmd
@@ -4,8 +4,8 @@
 
 1. In the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**, **{{< fa shield >}} Validation Report**, or **{{< fa desktop >}} Ongoing Monitoring**.
 
-   You can now jump to any section of the model documentation, validation report, or ongoing monitoring plan by expanding the table of contents on the left and selecting the relevant section you would like to add content to, such as **1.1 Model Overview**. 
+1. Click on a section header to expand that section and add content.
 
 1. Hover your mouse over the space where you want your new block to go until a horizontal dashed line with a {{< fa square-plus >}} sign appears that indicates you can insert a new block:
 
-    ![Adding a content block in the UI](/guide/model-documentation/add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the UI" .screenshot}
+    ![Adding a content block in the {{< var validmind.platform >}}](/guide/model-documentation/add-content-block.gif){width=90% fig-alt="A gif showing the process of adding a content block in the ValidMind Platform" .screenshot}
