--- a/site/guide/model-documentation/work-with-content-blocks.qmd
+++ b/site/guide/model-documentation/work-with-content-blocks.qmd
@@ -54,6 +54,9 @@ Use {{< var vm.product >}} to assist you with generating content via AI!^[[Gener
 {{< include /guide/model-documentation/_add-content-block.qmd >}}
 
 5. Click {{< fa square-plus >}} and then select one of the available options: 
+
+   - **[new]{.smallcaps}**
+   - **[from library]{.smallcaps}**
     
     - **Text** — Adds a new section with a blank content block. After the new content block has been added, click {{< fa pencil >}} to edit the contents of the section like any other.
     - **Test-Driven**[^5] — Adds a new section with test results. 
